--- a/app/views/apartments/_form.html.erb
+++ b/app/views/apartments/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :rent %>
-    <%= f.number_field :rent %>
+    <%= f.number_field :rent %>円
   </div>
 
   <div class="field">
@@ -28,13 +28,33 @@
 
   <div class="field">
     <%= f.label :building_age %>
-    <%= f.number_field :building_age %>
+    <%= f.number_field :building_age %>年
   </div>
 
   <div class="field">
     <%= f.label :note %>
     <%= f.text_area :note %>
   </div>
+
+  <hr>
+
+  <%= f.fields_for :nearest_stations do |ns| %>
+    <h3>最寄り駅<%= (ns.index + 1) %></h3>
+    <div class="field">
+      <%= ns.label :line %>
+      <%= ns.text_field :line %>
+    </div>
+
+    <div class="field">
+      <%= ns.label :name %>
+      <%= ns.text_field :name %>
+    </div>
+
+    <div class="field">
+      <%= ns.label :minutes_walk %>
+      <%= ns.number_field :minutes_walk %>分
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= f.submit %>
