--- a/app/views/apartments/show.html.erb
+++ b/app/views/apartments/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Rent:</strong>
-  <%= @apartment.rent %>
+  <%= @apartment.rent %>円
 </p>
 
 <p>
@@ -17,13 +17,31 @@
 
 <p>
   <strong>Building age:</strong>
-  <%= @apartment.building_age %>
+  <%= @apartment.building_age %>年
 </p>
 
 <p>
   <strong>Note:</strong>
   <%= @apartment.note %>
 </p>
+
+<hr>
+
+<% @nearest_stations.each.with_index(1) do |ns, i| %>
+  <h3>最寄り駅<%= i %></h3>
+  <p>
+    <strong>路線名:</strong>
+    <%= ns.line %>
+  </p>
+  <p>
+    <strong>駅名:</strong>
+    <%= ns.name %>
+  </p>
+  <p>
+    <strong>徒歩分数:</strong>
+    <%= ns.minutes_walk %>分
+  </p>
+<% end %>
 
 <%= link_to 'Edit', edit_apartment_path(@apartment) %> |
 <%= link_to 'Back', apartments_path %>
