--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Apartments</h1>
+<h1><%= Apartment.model_name.human + t('.index') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Rent</th>
-      <th>Address</th>
-      <th>Building age</th>
-      <th>Note</th>
+      <th><%= Apartment.human_attribute_name :name %></th>
+      <th><%= Apartment.human_attribute_name :rent %></th>
+      <th><%= Apartment.human_attribute_name :address %></th>
+      <th><%= Apartment.human_attribute_name :building_age %></th>
+      <th><%= Apartment.human_attribute_name :note %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,13 +18,13 @@
     <% @apartments.each do |apartment| %>
       <tr>
         <td><%= apartment.name %></td>
-        <td><%= apartment.rent %></td>
+        <td><%= number_to_currency apartment.rent %></td>
         <td><%= apartment.address %></td>
         <td><%= apartment.building_age %></td>
         <td><%= apartment.note %></td>
-        <td><%= link_to 'Show', apartment %></td>
-        <td><%= link_to 'Edit', edit_apartment_path(apartment) %></td>
-        <td><%= link_to 'Destroy', apartment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('helpers.action.show'), apartment %></td>
+        <td><%= link_to t('helpers.action.edit'), edit_apartment_path(apartment) %></td>
+        <td><%= link_to t('helpers.action.destroy'), apartment, method: :delete, data: { confirm: t('helpers.confirm.delete') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Apartment', new_apartment_path %>
+<%= link_to t('.submit'), new_apartment_path %>
