--- a/app/views/apartments/new.html.erb
+++ b/app/views/apartments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Apartment</h1>
+<h1><%= Apartment.model_name.human + t('.new') %></h1>
 
 <%= render 'form', apartment: @apartment %>
 
-<%= link_to 'Back', apartments_path %>
+<%= link_to t('helpers.action.back'), apartments_path %>
